fix: Battle.net/Discord Icons & Colors
- Removes duplicate battle.net and discord icons
- Update the Battle.net icon to match the real logo
- Update the Discord icon to match the real logo
- The new Battle.net & Discord SVGs allow changing the color to whatever you want with CSS instead of hardcoding it in the SVG
- Fixes bug on Discord buttons where the discord icon is the same color as the button background making the icon invisible, now that the color can be changed you can switch between a white icon and a discord colored icon

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -22,8 +22,8 @@ $border-color: #353b3f;
 
 $primary: #f06414;
 $secondary: lighten($body-bg, 5%);
-$discord: #7289da;
-$bnet: #0288d1;
+$discord: #5865F2;
+$bnet: #148EFF;
 $ko-fi: #ff5e5b;
 $overwatch-2: #ed6516;
 $wiki: #00abff;
