--- a/app/assets/stylesheets/utilities/_colors.scss
+++ b/app/assets/stylesheets/utilities/_colors.scss
@@ -6,6 +6,18 @@
   color: $text-color-lightest;
 }
 
+.icon-white {
+  color: $white;
+}
+
+.icon-discord {
+  color: $discord;
+}
+
+.icon-battlenet {
+  color: $bnet;
+}
+
 .text-pure-white {
   color: $white;
 }
